# oomact

./: .gitignore  dependencies.rosinstall
oomact/include/aslam/calibration/model/sensors/: WheelOdometry.h
oomact/src/model/sensors/: WheelOdometry.cpp
oomact/src/test/: MockMotionCaptureSource.cpp
oomact/test/: test_main.cpp
oomact/test/acceptance/: WheelOdometryCalibrationTest.cpp  wheelOdometry-pose.info
oomact_python/: CMakeLists.txt  package.xml
oomact_python/python/oomact/: __init__.py  visualisation.py
oomact_python/python/oomact_backend/: __init__.py
oomact_python/src/: Calibrators.cpp  FrameGraphModel.cpp  Measurements.cpp  Models.cpp  MotionCaptureSource.cpp  PoseTrajectory.cpp  Sensors.cpp  module.cpp
oomact_python/test/: tests.py  wheel_odometry_calibration_tests.py
oomact_ros/src/: CalibrationNode.cpp
oomact_ros_examples/cfg/: kitti_vision_odo.info
oomact_ros_examples/launch/: kitti_vision_odo.launch
